mcabber (0.6.2-dev)

 * New multi-line "verbatim" mode (/msay verbatim).  In this mode, all
   commands but /msay are disabled, so that lines beginning with a slash
   can be sent.
 * Ctrl-o (accept-line-and-down-history)
 * Add "/roster search jid|name" to look for somebody in the current buddylist

 -- Mikael, ?

mcabber (0.6.1)

  * Fix backspace handling (KEY_BACKSPACE isn't reliable)
  * Change logfile date format to iso8601 (more readable!)
    A script is available in contrib/ to convert the existing (old) logfiles
    MCabber will display a warning when parsing an old-style file
  * Implement Ctrl-q (jump to first/next unread message)
  * Implement initial support for multi-line messages (/msay command)
  * The /add command can now set the nickname
  * Display a warning when the locale is UTF-8
  * Display log notice when sending a notification request message
  * Update INSTALL and mcabberrc.example files for better explanations
  * Comment out useless code (fix a compilation error with gcc 4)
  * Add Makefile for the doc subdir; the manpage will be installed now
  * Minor fixes

 -- Mikael, 2005-06-25

mcabber (0.6.0)

  Initial fork from cabber 0.5.0-test1
  Lots of changes, here is a quick summary:
  * Use automake/autoconf
  * Switch to libjabber
  * SSL support with OpenSSL (should work with gnutls but I didn't
    succeed)
  * History scrolling and resizing
  * History logging (and reading)
  * Small manpage (AsciiDoc documentation)
  * Buddy groups implementation
    - fold/unfold groups
    - hide/show offline buddies
  * Commands, and command completion system
  * Hooks for external events (for ex. when receiving a message)

 -- Mikael, 2005-06-07