@@ -5,6 +5,8 @@ mcabber (0.6.2-dev)
    can be sent.
  * Ctrl-o (accept-line-and-down-history)
  * Add "/roster search jid|name" to look for somebody in the current buddylist
+ * Color configuration handling improvement.
+   NOTE: configuration file needs to be updated; see sample config. file!
 
  -- Mikael, ?
 
